<resources>
    <string name="app_name">MCRE</string>
    <string name="action_settings">Settings</string>
    <string name="empty_pack">Nothing was found in your data folder.</string>
    <string name="root_path_located">Searched in %s</string>
    <string name="permission_denied">Permissions denied. Unable to search your data folder.</string>
    <string name="action_retry">Retry</string>
    <string name="action_manager">Manager</string>
    <string name="description_searched_path">Change path to search</string>
    <string name="info_size">File size: %s</string>
    <string name="info_pack_version">Pack version: %s</string>
    <string name="version_bedrock">Bedrock Edition</string>
    <string name="version_java">Java Edition</string>
    <string name="info_calculating">Calculating…</string>
    <string name="info_useless_pack">Useless File</string>
    <string name="info_useless_pack_remove">This file is meaningless to Minecraft and should be removed.</string>
    <string name="action_delete">Delete</string>
    <string name="info_deleted">Deleted %s</string>
    <string name="action_undo">Undo</string>
    <string name="action_expend">Expend for more info</string>
    <string name="action_collapse">Collapse for less info</string>
    <string name="info_thread_pool_shutting_down">Shutting down the thread pool…</string>
    <string name="info_task_finishing">Finishing Reaming Tasks</string>
    <string name="info_cleaning_up">Cleaning up…</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_select_all">Select All</string>
    <string name="action_select_inverse">Inverse Select</string>
    <string name="action_back">Back</string>
    <string name="action_new_project">New Project</string>
    <string name="title_detail">Detail Activity</string>
    <string name="exception_shared_storage_not_available">Shared storage not available.</string>
    <string name="action_close_app">Close App</string>
    <string name="title_unhandled_exception">Unhandled Exception</string>
    <string name="info_unhandled_exception">The logical of the app can not handle this exception, which isn\'t in main
        thread. So you can ignore it and continue, but I can\'t ensure whether it will be all right.
    </string>
    <string name="exception_shared_storage_unreachable">Unable to fetch files in shared storage.</string>
    <string name="action_search">Search</string>
    <string name="title_data">Data</string>
    <string name="title_assets">Assets</string>
    <string name="title_required">Required</string>
    <string name="title_name">Name</string>
    <string name="info_name">text displayed as the first to appear</string>
    <string name="title_description">Description</string>
    <string name="info_description">some text displayed under the name</string>
    <string name="info_required">These data are necessary for a pack to work.</string>
    <string name="exception_file_not_found">File %s doesn\'t exist.</string>
    <string name="exception_json_element_not_found">JSON element %s doesn\'t exist in file %s.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="preference_search_path">Path to search</string>
    <string name="preference_appearance">Appearance</string>
    <string name="preference_night_mode">Night Mode</string>
    <string name="preference_general">General</string>
    <string name="exception_element_not_found">No such element found at %s.</string>
    <string name="title_edit_what">Edit text in %s</string>
    <string name="name_name">Name</string>
    <string name="action_close_all">Close All</string>
    <string name="action_close_others">Close Others</string>
    <string name="action_pin_tab">Pin Tab</string>
    <string name="action_close_unpinned">Close Unpinned</string>
    <string name="name_description">Description</string>
    <string name="title_default_project_description">Resource pack created by MCRE.</string>
    <string name="exception_render_mc_text">Error occurred while rendering text.</string>
    <string name="exception_expecting">Expecting %s.</string>
    <string name="name_hex">sexadecimal digit</string>
    <string name="action_save">Save</string>
    <string name="name_project">Project</string>
    <string name="action_new_folder">New Folder</string>
    <string name="action_ok">OK</string>
    <string name="info_file_exists">File already exists.</string>
    <string name="info_empty_name">Name must not be empty.</string>
    <string name="title_file_replacing">File Replacing</string>
    <string name="info_replace_or_not">File %s already exists. Do you want to replace it or not?</string>
    <string name="name_file">File</string>
    <string name="name_folder">Folder</string>
    <string name="info_modified">Modified at %s</string>
    <string name="action_replace">Replace</string>
    <string name="action_skip">Skip</string>
    <string name="action_keep_both">Keep Both</string>
    <string name="info_unknown">Unknown</string>
    <string name="info_size_unknown">Unknown size</string>
    <string name="info_saved_to">Saved %s to %s.</string>
    <string name="name_copy">Copy</string>
    <string name="name_unnamed">Unnamed</string>
    <string name="action_redo">Redo</string>
    <string name="name_type">Type</string>
    <string name="title_new_element">New Element</string>
    <string name="exception_perform_operation">Failed to perform operation for %s.</string>
    <string name="operation_list_modifying">List Modifying</string>
    <string name="operation_varible_changing">Varibing Changing</string>
    <string name="title_user_element">User Element</string>
    <string name="info_user_element">These data are defined by user, and may not be used by context.</string>
    <string name="exception_element_not_supported">Element type %s in %s is unable to be edited.</string>
    <string name="exception_empty_input">Input must not be empty.</string>
</resources>
