<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:padding="@dimen/padding_normal">
    <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:padding="@dimen/padding_normal" android:orientation="vertical">
            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/title_required"
                          android:textColor="?attr/colorOnSurface"/>
                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/ic_help_black"
                        android:id="@+id/help_required_card"
                        android:background="?attr/selectableItemBackgroundBorderless"/>
            </RelativeLayout>
            <com.zhufucdev.mcre.view.SimpleItemView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/data_item_name"
                    app:title="@string/title_name"
                    app:subtitle="@string/info_name"
                    app:icon="@drawable/ic_short_text_black"/>
            <com.zhufucdev.mcre.view.SimpleItemView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/data_item_description"
                    app:title="@string/title_description"
                    app:subtitle="@string/info_description"
                    app:icon="@drawable/ic_short_text_black"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>