<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/padding_normal">
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_normal">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_input_name"
                android:hint="@string/name_name"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_input_description"
                android:hint="@string/name_description"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/name_type" android:textColor="?attr/colorOnSurface"
              android:textSize="@dimen/text_small" android:layout_marginTop="@dimen/padding_big"/>
    <androidx.appcompat.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/type_spinner"/>
</LinearLayout>